Python has lxml library
fixes
```
File "./aku2elan.py", line 5, in <module>
    from lxml import etree
    ImportError: No module named lxml
```

--- a/assets/Dockerfile
+++ b/assets/Dockerfile
@@ -40,4 +40,4 @@ RUN git clone https://github.com/aalto-speech/speaker-diarization.git; \
     ln -s ../AaltoASR ./ ; \
     ln -s ../AaltoASR/build ./ ; \
     ln -s ../AaltoASR/build/aku/feacat ./ ; \
-    pip install numpy scipy docopt
+    pip install numpy scipy docopt lxml
