Clarify comments and output results
Signed-off-by: Brendan E Cunnie <saintbrendan@gmail.com>

--- a/assets/cmu-sphinx4-transcriber/Dockerfile
+++ b/assets/cmu-sphinx4-transcriber/Dockerfile
@@ -2,9 +2,7 @@
 #
 # To run:
 #   docker run -it blabbertabber/cmu-sphinx4-transcriber bash
-#   java -Xmx2g -cp sphinx4-5prealpha-src/sphinx4-samples/build/libs/sphinx4-samples-5prealpha-SNAPSHOT.jar edu.cmu.sphinx.demo.speakerid.SpeakerIdentificationDemo
-#   java -Xmx2g -cp sphinx4-5prealpha-src/sphinx4-samples/build/libs/sphinx4-samples-5prealpha-SNAPSHOT.jar edu.cmu.sphinx.demo.transcriber.TranscriberDemo 2> /dev/null
 
-FROM docker pull blabbertabber/cmu-sphinx4
+FROM blabbertabber/cmu-sphinx4
 
 LABEL authors="Brian Cunnie <brian.cunnie@gmail.com>, Brendan Cunnie <saintbrendan@gmail.com>"
