Dockerfile with built-in transcriber
Signed-off-by: Brendan E Cunnie <saintbrendan@gmail.com>

--- a/assets/cmu-sphinx4-transcriber/Dockerfile
+++ b/assets/cmu-sphinx4-transcriber/Dockerfile
@@ -6,3 +6,7 @@
 FROM blabbertabber/cmu-sphinx4
 
 LABEL authors="Brian Cunnie <brian.cunnie@gmail.com>, Brendan Cunnie <saintbrendan@gmail.com>"
+
+RUN curl -OL "https://raw.githubusercontent.com/blabbertabber/DiarizerServer/master/assets/cmu-sphinx4-transcriber/Transcriber.java"
+
+RUN javac Transcriber.java -cp /sphinx4-5prealpha-src/sphinx4-core/build/libs/sphinx4-core-5prealpha-SNAPSHOT.jar
