IBM Speech-to-Text has Dockerfile
- added patch file to adjust IBM's STT configuration
- updated existing Dockerfiles to have `CMD`

--- a/assets/aalto-speech/Dockerfile
+++ b/assets/aalto-speech/Dockerfile
@@ -12,6 +12,8 @@ FROM fedora
 
 LABEL authors="Brian Cunnie <brian.cunnie@gmail.com>, Brendan Cunnie <saintbrendan@gmail.com>"
 
+CMD ["/bin/bash"]
+
 # required development tools
 RUN dnf groupinstall -y "Development Tools"; \
 	dnf install -y cmake \
