IBM JSON Docker container applies custom patch
- really, truly this time
- includes diarization, limits alternatives to 1, etc...

--- a/assets/ibm-watson-stt/Dockerfile
+++ b/assets/ibm-watson-stt/Dockerfile
@@ -16,6 +16,6 @@ RUN dnf groupinstall -y "Development Tools"
 
 RUN git clone https://github.com/watson-developer-cloud/speech-to-text-websockets-python
 
-# RUN   cd speech-to-text-websockets-python; \
-#    curl -L https://gist.githubusercontent.com/cunnie/0825743040dbf9d889b50a28054354b3/raw/08ed8b680e0e82d4626884feb484fd31d6db641d/sttclient.patch -o sttClient.patch; \
-#    git apply sttClient.patch
+RUN   cd speech-to-text-websockets-python; \
+  curl -OL https://raw.githubusercontent.com/blabbertabber/DiarizerServer/master/assets/ibm-watson-stt/sttClient.patch; \
+  git apply sttClient.patch
