IBM Watson STT Dockerfile has correct comment
Signed-off-by: Brian Cunnie <brian.cunnie@gmail.com>

--- a/assets/ibm-watson-stt/Dockerfile
+++ b/assets/ibm-watson-stt/Dockerfile
@@ -4,7 +4,8 @@
 #  - don't worry about continuous (streaming)/interim results
 
 # To run:
-#   docker run -it blabbertabber/ibm-watson-stt bash
+#   docker run python ./sttClient.py -credentials 9f6c2cb4-d9d3-49db-96e4-58406a2fxxxx:8rgjxxxxxxxx -model en-US_NarrowbandModel -in <(echo /Users/cunnie/Google Drive/BlabberTabber/ICSI-diarizer-sample-meeting.wav) -out /tmp/junk
+
 
 FROM fedora
 
