Diarizer server starts after upgrade to Fedora26
- [it appears that] on upgrading we must manually `systemctl disable
diarizer; systemctl enable diarizer`
- [it appears that] we must explicitly set the user and group to
diarizer:diarizer; on the bright side we don't need to run as setuid
- fixes a bug where `go build ibmjson` would fail because there was already a directory of the same name.

I am not sure of the changes in this commit; some are important,
others merely cosmetic

When the SSL cert expires because the IPv6 addr changes, need to
temporary turn of the 301 redirect from HTTP to HTTPS in `nginx.conf`
to avoid being redirected to an invalid cert when running
`/etc/cron.weekly/letsencrypt.sh`

fixes:
```
Aug 20 15:14:28 test speechbroker: docker: Got permission denied while trying to connect to the Docker daemon socket at unix:///var/run/docker.sock: Post http://%2Fvar%2Frun%2Fdocker.sock/v1.30/containers/create: dial unix /var/run/docker.sock: connect: permission denied.
```

--- a/assets/diarizer.service
+++ b/assets/diarizer.service
@@ -1,10 +1,14 @@
 [Unit]
 Description=Diarizer server which diarizes files uploaded to it
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=simple
 ExecStart=/usr/local/bin/speechbroker -ibmServiceCredsPath=/etc/ibm_service_creds.json
 Restart=always
-           
+User=diarizer
+Group=diarizer
+
 [Install]
-WantedBy=default.target
+WantedBy=multi-user.target
