Documentation for configuring the speed factors
- speedfactors for diarization and transcription are kept in a JSON file
- enable the user to know how long he/she has to wait
- moved configuration files to `/etc/speechbroker/`

Signed-off-by: Brendan Cunnie <saintbrendan@gmail.com>

--- a/assets/diarizer.service
+++ b/assets/diarizer.service
@@ -5,7 +5,7 @@ Wants=network-online.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/speechbroker -ibmServiceCredsPath=/etc/ibm_service_creds.json
+ExecStart=/usr/local/bin/speechbroker -ibmServiceCredsPath=/etc/speechbroker/ibm_service_creds.json -speedfactorsPath=/etc/speechbroker/speedfactors.json
 Restart=always
 User=diarizer
 Group=diarizer
