Docker image contains npm and jest

--- a/assets/golang-ginkgo/Dockerfile
+++ b/assets/golang-ginkgo/Dockerfile
@@ -7,4 +7,7 @@ LABEL authors="Brian Cunnie <brian.cunnie@gmail.com>, Brendan Cunnie <saintbrend
 CMD ["/bin/bash"]
 
 RUN go get github.com/onsi/ginkgo/ginkgo; \
-    go get github.com/onsi/gomega
+    go get github.com/onsi/gomega; \
+    apt update; \
+    apt install -y node npm; \
+    npm install --save-dev jest --global
