Docker image contains JS test tools
We use Facebook's [jest](http://facebook.github.io/jest/) for JavaScript
testing.

To install nodejs, do not be lulled into typing `apt install -y nodejs`;
it will give you an old, stale version of node which won't work properly
with `jest`. `npm test` will fail as follows:

```
/usr/local/lib/node_modules/jest/node_modules/jest-cli/build/cli/index.js:1
sModule", { value: true });exports.runCLI = exports.run = undefined;let run =
                                                                    ^^^
SyntaxError: Unexpected strict mode reserved word
    at Module._compile (module.js:439:25)
```

Instead we follow these instructions:
<https://nodejs.org/en/download/package-manager>

Signed-off-by: Brian Cunnie <brian.cunnie@gmail.com>

--- a/assets/golang-ginkgo/Dockerfile
+++ b/assets/golang-ginkgo/Dockerfile
@@ -1,4 +1,4 @@
-# This is a Dockerfile of golang + ginkgo + gomega test tools
+# This is a Dockerfile of golang + ginkgo + gomega + node + jest test tools
 
 FROM golang
 
@@ -7,4 +7,8 @@ LABEL authors="Brian Cunnie <brian.cunnie@gmail.com>, Brendan Cunnie <saintbrend
 CMD ["/bin/bash"]
 
 RUN go get github.com/onsi/ginkgo/ginkgo; \
-    go get github.com/onsi/gomega
+    go get github.com/onsi/gomega; \
+    apt update; \
+    curl -sL https://deb.nodesource.com/setup_8.x | bash -; \
+    apt install -y nodejs; \
+    npm install --save-dev --global jest
