JS testing is called from correct dir with correct args
...and with correct branch.

fixes:
```
TypeError: imports.newlinesToHTMLBreaks(...).toBe is not a function
```

fixes
```
ENOENT: no such file or directory, open '/tmp/build/14fdeea7/package.js
```

fixes
```
Usage: npm <command>
```

Signed-off-by: Brian Cunnie <brian.cunnie@gmail.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -42,7 +42,8 @@ jobs:
       run:
         path: npm
         args:
-        - "jest"
+        - "test"
+        dir: diarizer_results/js
 - name: production-server
   plan:
   - {get: speech_broker, trigger: true}
@@ -98,7 +99,6 @@ resources:
   type: git
   source:
     uri: https://github.com/blabbertabber/DiarizerResults
-    branch: jest
 - name: 6h
   type: time
   source: {interval: 6h}
