CI: Bump `golang-ginkgo` Dockerfile
- it has been two years since last bump
- incorporates Ginkgo's new `When()` directive, which is much more
natural than `Describe()` or `Context()`
- `yarn` replaces `npm`
- follow these instructions to install nodejs:
<https://nodejs.org/en/download/package-manager>
- ...which, in turn, have instructions for installing `yarn`
- ...which has a slightly different syntax for installing `jest`

fixes <https://ci.nono.io/teams/main/pipelines/u2date/jobs/integration/builds/24>:
```
u2date/u2date_test.go:40:2: undefined: When
```

--- a/assets/golang-ginkgo/Dockerfile
+++ b/assets/golang-ginkgo/Dockerfile
@@ -8,7 +8,12 @@ CMD ["/bin/bash"]
 
 RUN go get github.com/onsi/ginkgo/ginkgo; \
     go get github.com/onsi/gomega; \
-    apt update; \
-    curl -sL https://deb.nodesource.com/setup_8.x | bash -; \
-    apt install -y nodejs; \
-    npm install --save-dev --global jest
+    apt-get update; \
+    curl -sL https://deb.nodesource.com/setup_12.x | bash -; \
+    apt-get install -y nodejs; \
+    apt-get install -y gcc g++ make; \
+    curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -; \
+    echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list; \
+    apt-get update; \
+    apt-get install -y yarn; \
+    yarn global add jest --dev
