Autoscaler Dockerfile: install my sysadmin utilities
- lsof, netstat, ifconfig, ip
- install fasd (fast finder)

--- a/assets/autoscaler-and-scheduler/Dockerfile
+++ b/assets/autoscaler-and-scheduler/Dockerfile
@@ -6,7 +6,6 @@ FROM fedora:32
 
 MAINTAINER TAS Autoscaler and Scheduler <tas-autoscaler-and-scheduler@groups.vmware.com>
 
-# need ruby to run dns-check.rb & bind-utils for dig & nslookup
 RUN dnf update -y; \
   dnf groupinstall -y "Development Tools"; \
   dnf install -y golang; \
@@ -14,7 +13,8 @@ RUN dnf update -y; \
   dnf install -y mysql-devel openssl-devel zlib-devel; \
   dnf install -y which zsh; \
   dnf install -y curl npm ripgrep fd-find neovim python3-neovim; \
-  dnf install -y cmake hostname; \
+  dnf install -y cmake direnv hostname; \
+  dnf install -y procps-ng tcpdump lsof net-tools iproute bind-utils; \
   gem install yajl-ruby
 
 RUN curl -L https://github.com/cloudfoundry/bosh-cli/releases/download/v6.3.1/bosh-cli-6.3.1-linux-amd64 -o /usr/local/bin/bosh; \
@@ -27,5 +27,9 @@ RUN git clone https://github.com/luan/nvim /root/.config/nvim
 # remember to set up MySQL auto/auto_secret and scheduler/password
 
 RUN sed -i 's/robbyrussell/agnoster/' /root/.zshrc
+
+RUN curl -L https://github.com/clvv/fasd/tarball/1.0.1 -o - | tar xzvf - ; \
+  cd clvv*; \
+  make install
 
 CMD [ "/usr/bin/zsh" ]
